added links to nav, also added Join and Log In anchors

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <div class="page-container">
         <header>
             <nav>
-                <a>Home</a>
-                <a>About</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Join</a>
+                <a href="#">Log In</a>
             </nav>
 
             <div class="logo">
