--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Secret family cookbook app marketing page</title>
     <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/index.css" type="text/css" rel="stylesheet"/>
+    <script src="less.js" type="text/javascript"></script>
   </head>
+
   <body class="home">
 
 <div class="navBox">
