removed some links

--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="#">Join</a>
-                <a href="#">Log In</a>
             </nav>
 
-            <div class="logo">
+            <div class="head-text">
                 <h1><a href="index.html">Secret Family Recipe Cookbook</a></h1>
                 <p>A place to store all of your precious handed down recipes with style.</p>
             </div>
