--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Secret family cookbook app marketing page</title>
-    <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/index.css" type="text/css" rel="stylesheet"/>
     <script src="less.js" type="text/javascript"></script>
   </head>
@@ -27,8 +28,7 @@
       <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
 
 
-      <hr>
-      <hr>
+
 </div>
 <div class="midPageTxt">
 
@@ -36,19 +36,27 @@
       <h2>Lorem Ipsum Lorem Ipsum Lorem Ipsum</h2>
 </div>
 
-<div class="artBox">
+<div class="artsBox">
+
+
 
 
       <article class="photoPbox">
         <img src="img/P1100345.jpg" alt="">
         <h3>Lorem Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
+</article>
+
+
 
 
         <article class="photoPbox">
           <img src="img/P1100347.jpg" alt="">
           <h3>Lorem Ipsum</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
+</article>
+
+
 
 
           <article class="photoPbox">
@@ -57,23 +65,31 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
 
       </article>
-    </div>
-
+      </div>
+<<div class="btn-center">
 <button type="button" name="button">login</button>
+</div>
 
-<hr>
-<footer>
+
 
 
 <article class="fullImgTxt">
-  <img src="img/IMG_0859.jpg" alt="">
-  <h2>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</h2>
+  <img src="img/IMG_0808.jpg" alt="">
+  <<div class="imgText">
 
+  <h2>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</h2>
+</div>
 </article>
-</footer>
 
 <hr>
 
+<footer>
+  <a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-twitter"></a>
+  <a href="#" class="fa fa-google"></a>
+  <a href="#" class="fa fa-linkedin"></a>
+
+</footer>
 
 
   </body>
