commiting less, index, and css index files

--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
     <title>Secret Family Recipe Cookbook</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, intital-scale=1, user-scalable=no">
-    <link src="css/index.css" rel="stylesheet">
-</head>
 
-<style>
-    @import url("fontawesome-all.min.css");
-    @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Arvo:700");
-</style>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300&display=swap" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+</head>
 
 <body>
     <div class="page-container">
@@ -24,12 +21,12 @@
                 <p>A place to store all of your precious handed down recipes with style.</p>
             </div>
         </header>
+        
+        <div class="h2head">
+            <h2>Behold, this is <strong>a recipe website</strong>!</h2>
+        </div>
 
         <div class="blurbs">
-            <div class="h2head">
-                <h2>Behold, this is <strong>a recipe website</strong>!</h2>
-            </div>
-
             <section class="left-content">
                 <a href="#" class="image"><img src="images/oldrecipeimg1.jpg" alt="Old Recipe Page"></img></a>
                 <h3>1st Title Placeholder, I mean, lorem ipsum</h3>
@@ -56,6 +53,7 @@
                 neutra tousled art party. Officia ennui deserunt meggings blog single-origin 
                 coffee vinyl ea cupidatat butcher prism veniam microdosing. </p>
             </section>
+        </div>
 
             <section class="banner">
                 <p>This is a placeholder for some <strong>profound statements</strong>.<br>
@@ -83,8 +81,6 @@
                         man bun polaroid. Labore normcore master cleanse celiac sed viral nulla.</p>
                 </div>
             </section>
-        </div>
-
         <footer>
             <p>&copy; Secret Family Recipe Cookbook, LLC<p>
         </footer>
