--- a/about.html
+++ b/about.html
@@ -16,15 +16,15 @@
 
 
     <nav>
-      <a href="about.html">about us</a>
-      <a href="#">contact</a>
+      <a href="index.html">Home</a>
+      <a href="#">Contact</a>
     </nav>
 
 </div>
 <div class="h1Mission">
 
 
-    <h1>Secret Family Cookbook</h1>
+    <h1>about us</h1>
       <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
 
 
@@ -36,34 +36,65 @@
       <h2>Lorem Ipsum Lorem Ipsum Lorem Ipsum</h2>
 </div>
 
-<div class="artsBox">
+<div class="aboutBox">
+
+  <article class="teamBox">
+    <div class="imgName">
+    <img src="img/P1100345.jpg" alt="">
+    <h3>Lorem Ipsum</h3>
+    </div>
+    <div class="pAbout">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-google"></a>
+    <a href="#" class="fa fa-linkedin"></a>
+    </div>
+</article>
 
 
-
-
-      <article class="photoPbox">
+      <article class="teamBox">
+        <div class="imgName">
         <img src="img/P1100345.jpg" alt="">
         <h3>Lorem Ipsum</h3>
+        </div>
+        <div class="pAbout">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-google"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        </div>
 </article>
 
 
 
 
-        <article class="photoPbox">
-          <img src="img/P1100347.jpg" alt="">
+        <article class="teamBox">
+          <div class="imgName">
+          <img src="img/P1100345.jpg" alt="">
           <h3>Lorem Ipsum</h3>
+          </div>
+          <div class="pAbout">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-google"></a>
+          <a href="#" class="fa fa-linkedin"></a>
+          </div>
 </article>
 
 
 
 
-          <article class="photoPbox">
-            <img src="img/P1100343.jpg" alt="">
+          <article class="teamBox">
+            <div class="imgName">
+            <img src="img/P1100345.jpg" alt="">
             <h3>Lorem Ipsum</h3>
+            </div>
+            <div class="pAbout">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
-
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-google"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            </div>
       </article>
       </div>
 <<div class="btn-center">
