--- a/about.html
+++ b/about.html
@@ -8,40 +8,48 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/index.css" type="text/css" rel="stylesheet"/>
     <script src="less.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      /* Open */
+      function openNav() {
+        document.getElementById("myNav").style.height = "5%";
+      }
+
+      /* Close */
+      function closeNav() {
+        document.getElementById("myNav").style.height = "0%";
+      }
+    </script>
+
   </head>
 
   <body class="home">
 
-<div class="navBox">
+    <div id="myNav" class="overlay">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <div class="overlay-content">
+        <a href="about.html">About</a>
+        <a href="#">Contact</a>
+      </div>
+    </div>
 
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; menu</span>
 
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="#">Contact</a>
-    </nav>
-
-</div>
 <div class="h1Mission">
 
 
     <h1>about us</h1>
       <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
 
-
-
-</div>
-<div class="midPageTxt">
-
-
-      <h2>Lorem Ipsum Lorem Ipsum Lorem Ipsum</h2>
 </div>
 
 <div class="aboutBox">
 
-  <article class="teamBox">
+<article id="sidebars"  class="teamBox">
+  <a href="javascript:void(0)" class="closeAbout" onclick = "closeAbout()">
     <div class="imgName">
+        <h3>Lorem Ipsum</h3>
     <img src="img/P1100345.jpg" alt="">
-    <h3>Lorem Ipsum</h3>
+</a>
     </div>
     <div class="pAbout">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
@@ -54,8 +62,9 @@
 
       <article class="teamBox">
         <div class="imgName">
+      <h3>Lorem Ipsum</h3>
         <img src="img/P1100345.jpg" alt="">
-        <h3>Lorem Ipsum</h3>
+
         </div>
         <div class="pAbout">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
@@ -70,8 +79,9 @@
 
         <article class="teamBox">
           <div class="imgName">
+            <h3>Lorem Ipsum</h3>
           <img src="img/P1100345.jpg" alt="">
-          <h3>Lorem Ipsum</h3>
+
           </div>
           <div class="pAbout">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
@@ -86,8 +96,9 @@
 
           <article class="teamBox">
             <div class="imgName">
+              <h3>Lorem Ipsum</h3>
             <img src="img/P1100345.jpg" alt="">
-            <h3>Lorem Ipsum</h3>
+
             </div>
             <div class="pAbout">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
@@ -97,22 +108,9 @@
             </div>
       </article>
       </div>
-<<div class="btn-center">
-<button type="button" name="button">login</button>
-</div>
-
-
-
-
-<article class="fullImgTxt">
-  <img src="img/IMG_0808.jpg" alt="">
-  <<div class="imgText">
-
-  <h2>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</h2>
-</div>
-</article>
-
+  <img src="img/line.gif" alt="">
 <footer>
+
   <a href="#" class="fa fa-facebook"></a>
   <a href="#" class="fa fa-twitter"></a>
   <a href="#" class="fa fa-google"></a>
