--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="myNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <div class="overlay-content">
-        <a href="#">About</a>
+        <a href="about.html">About</a>
         <a href="#">Contact</a>
       </div>
     </div>
@@ -41,7 +41,7 @@
     <h1>Secret Family Cookbook</h1>
       <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
 
-
+<img class ="line" src="img/line.gif" alt="line">
 
 </div>
 <div class="midPageTxt">
