--- a/about.html
+++ b/about.html
@@ -18,6 +18,19 @@
       function closeNav() {
         document.getElementById("myNav").style.height = "0%";
       }
+
+      /* Set the width of the sidebar to 250px and the left margin of the page content to 250px */
+function openAbout() {
+  document.getElementById("sidebar").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
+}
+
+/* Set the width of the sidebar to 0 and the left margin of the page content to 0 */
+function closeAbout() {
+  document.getElementById("sidebar").style.width = "0";
+  document.getElementById("main").style.marginLeft = "0";
+}
+
     </script>
 
   </head>
@@ -44,71 +57,46 @@
 
 <div class="aboutBox">
 
-<article id="sidebars"  class="teamBox">
-  <a href="javascript:void(0)" class="closeAbout" onclick = "closeAbout()">
-    <div class="imgName">
-        <h3>Lorem Ipsum</h3>
-    <img src="img/P1100345.jpg" alt="">
-</a>
-    </div>
-    <div class="pAbout">
+<article  class="teamBox">
+
+
+    <div id="sidebars" class="pAbout">
+      <a href="javascript:void(0)" class="closeAbout" onclick = "closeAbout()"></a>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
     <a href="#" class="fa fa-twitter"></a>
     <a href="#" class="fa fa-google"></a>
     <a href="#" class="fa fa-linkedin"></a>
     </div>
+
+    <div id="main" class="imgName">
+
+      <button class="openAbout" onclick="openAbout()" name="button">
+        <h3>Lorem Ipsum</h3>
+    <img src="img/P1100345.jpg" alt="">
+    </button>
+    </div>
 </article>
 
+<article  class="teamBox">
 
-      <article class="teamBox">
-        <div class="imgName">
-      <h3>Lorem Ipsum</h3>
-        <img src="img/P1100345.jpg" alt="">
 
-        </div>
-        <div class="pAbout">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-google"></a>
-        <a href="#" class="fa fa-linkedin"></a>
-        </div>
+    <div id="sidebars" class="pAbout">
+      <a href="javascript:void(0)" class="closeAbout" onclick = "closeAbout()"></a>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-google"></a>
+    <a href="#" class="fa fa-linkedin"></a>
+    </div>
+
+    <div id="main" class="imgName">
+
+      <button class="openAbout" onclick="openAbout()" name="button">
+        <h3>Lorem Ipsum</h3>
+    <img src="img/P1100345.jpg" alt="">
+    </button>
+    </div>
 </article>
 
-
-
-
-        <article class="teamBox">
-          <div class="imgName">
-            <h3>Lorem Ipsum</h3>
-          <img src="img/P1100345.jpg" alt="">
-
-          </div>
-          <div class="pAbout">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
-          <a href="#" class="fa fa-twitter"></a>
-          <a href="#" class="fa fa-google"></a>
-          <a href="#" class="fa fa-linkedin"></a>
-          </div>
-</article>
-
-
-
-
-          <article class="teamBox">
-            <div class="imgName">
-              <h3>Lorem Ipsum</h3>
-            <img src="img/P1100345.jpg" alt="">
-
-            </div>
-            <div class="pAbout">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-google"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            </div>
-      </article>
-      </div>
-  <img src="img/line.gif" alt="">
 <footer>
 
   <a href="#" class="fa fa-facebook"></a>
