--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/index.css" type="text/css" rel="stylesheet"/>
-    <script src="less.js" type="text/javascript"></script>
-    <script type="text/javascript">
+    <!-- <script src="less.js" type="text/javascript"></script> -->
+    <script src="js/index.js" type="text/javascript" async></script>
+    <!-- <script type="text/javascript">
       /* Open */
       function openNav() {
         document.getElementById("myNav").style.height = "5%";
@@ -18,7 +19,7 @@
       function closeNav() {
         document.getElementById("myNav").style.height = "0%";
       }
-    </script>
+    </script> -->
 
   </head>
 
@@ -103,6 +104,10 @@
 
 </footer>
 
+<script src="js/index.js" type="text/javascript" ></script>
 
   </body>
+
+
+
 </html>
