--- a/about.html
+++ b/about.html
@@ -6,18 +6,9 @@
     <title>Secret family cookbook app marketing page</title>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="css/index.css" type="text/css" rel="stylesheet"/>
-    <script src="less.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      /* Open */
-      function openNav() {
-        document.getElementById("myNav").style.height = "5%";
-      }
-
-      /* Close */
-      function closeNav() {
-        document.getElementById("myNav").style.height = "0%";
-      }
+    <link href="css/about.css" type="text/css" rel="stylesheet"/>
+    <script src="js.index.js" type="text/javascript" async></script>
+    <!-- <script type="text/javascript">
 
       /* Set the width of the sidebar to 250px and the left margin of the page content to 250px */
 function openAbout() {
@@ -31,11 +22,11 @@ function closeAbout() {
   document.getElementById("main").style.marginLeft = "0";
 }
 
-    </script>
+    </script> -->
 
   </head>
 
-  <body class="home">
+  <body class="aboutHome">
 
     <div id="myNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -71,13 +62,13 @@ function closeAbout() {
     <div id="main" class="imgName">
 
       <button class="openAbout" onclick="openAbout()" name="button">
-        <h3>Lorem Ipsum</h3>
+        <h3>Andrew Bastian</h3>
     <img src="img/P1100345.jpg" alt="">
     </button>
     </div>
 </article>
 
-<article  class="teamBox">
+<!-- <article  class="teamBox">
 
 
     <div id="sidebars" class="pAbout">
@@ -95,16 +86,16 @@ function closeAbout() {
     <img src="img/P1100345.jpg" alt="">
     </button>
     </div>
-</article>
+</article> -->
 
-<footer>
+<!-- <footer>
 
   <a href="#" class="fa fa-facebook"></a>
   <a href="#" class="fa fa-twitter"></a>
   <a href="#" class="fa fa-google"></a>
   <a href="#" class="fa fa-linkedin"></a>
 
-</footer>
+</footer> -->
 
 
   </body>
