--- a/index.html
+++ b/index.html
@@ -7,48 +7,43 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/index.css" type="text/css" rel="stylesheet"/>
-    <!-- <script src="less.js" type="text/javascript"></script> -->
-    <script src="js/index.js" type="text/javascript" async></script>
-    <!-- <script type="text/javascript">
-      /* Open */
-      function openNav() {
-        document.getElementById("myNav").style.height = "5%";
-      }
-
-      /* Close */
-      function closeNav() {
-        document.getElementById("myNav").style.height = "0%";
-      }
-    </script> -->
-
+    <script src="js/index.js" type="text/javascript"></script>
   </head>
 
   <body class="home">
 
-    <div id="myNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <div class="overlay-content">
-        <a href="about.html">About</a>
-        <a href="#">Contact</a>
+<div class="navBox">
+
+
+      <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+          <a href="about.html">About</a>
+          <a href="#">Contact</a>
+        </div>
       </div>
-    </div>
 
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; menu</span>
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; menu</span>
 
+    <!-- <nav>
+      <a href="#">about us </a>
+      <a href="#">contact</a>
+    </nav> -->
 
+</div>
 <div class="h1Mission">
 
 
     <h1>Secret Family Cookbook</h1>
       <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
 
-<img class ="line" src="img/line.gif" alt="line">
+
 
 </div>
 <div class="midPageTxt">
 
 
-      <h2>Lorem Ipsum Lorem Ipsum Lorem Ipsum</h2>
+      <h2>What is Secret Family Cookbook?</h2>
 </div>
 
 <div class="artsBox">
@@ -96,6 +91,8 @@
 </div>
 </article>
 
+<hr>
+
 <footer>
   <a href="#" class="fa fa-facebook"></a>
   <a href="#" class="fa fa-twitter"></a>
@@ -104,10 +101,6 @@
 
 </footer>
 
-<script src="js/index.js" type="text/javascript" ></script>
 
   </body>
-
-
-
 </html>
