--- a/about.html
+++ b/about.html
@@ -1,102 +1,141 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Secret family cookbook app marketing page</title>
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="css/about.css" type="text/css" rel="stylesheet"/>
-    <script src="js.index.js" type="text/javascript" async></script>
-    <!-- <script type="text/javascript">
 
-      /* Set the width of the sidebar to 250px and the left margin of the page content to 250px */
-function openAbout() {
-  document.getElementById("sidebar").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-}
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Secret family cookbook app marketing page</title>
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="css/about.css" type="text/css" rel="stylesheet" />
+  <script src="js.index.js" type="text/javascript" async></script>
 
-/* Set the width of the sidebar to 0 and the left margin of the page content to 0 */
-function closeAbout() {
-  document.getElementById("sidebar").style.width = "0";
-  document.getElementById("main").style.marginLeft = "0";
-}
+</head>
 
-    </script> -->
+<body class="aboutHome">
 
-  </head>
-
-  <body class="aboutHome">
-
-    <div id="myNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <div class="overlay-content">
-        <a href="about.html">About</a>
-        <a href="#">Contact</a>
-      </div>
+  <div id="myNav" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="overlay-content">
+      <a href="about.html">About</a>
+      <a href="#">Contact</a>
     </div>
+  </div>
 
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; menu</span>
+  <span class="navbtn" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; menu</span>
 
-<div class="h1Mission">
+  <div class="h1Mission">
 
 
     <h1>about us</h1>
+    <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+
+  </div>
+
+  <h2>Andrew Bastian</h2>
+
+  <div id="main">
+
+
+    <span class="profilebtn" style="font-size:30px;cursor:pointer" onclick="open()">
+      <img src="img/fish.jpg" alt="">
+    </span>
+
+
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closeX" onclick="close()">&times;</a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-google"></a>
+      <a href="#" class="fa fa-linkedin"></a>
       <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
-
-</div>
-
-<div class="aboutBox">
-
-<article  class="teamBox">
+    </div>
 
 
-    <div id="sidebars" class="pAbout">
-      <a href="javascript:void(0)" class="closeAbout" onclick = "closeAbout()"></a>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
+
+
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="close()">&times;</a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-google"></a>
+      <a href="#" class="fa fa-linkedin"></a>
+      <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+    </div>
+
+
+    <h2>Barbra Mayfield</h2>
+
+    <span class="profilebtn" style="font-size:30px;cursor:pointer" onclick="open()">
+      <img src="img/P1110465.jpg" alt="">
+    </span>
+
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="close()">&times;</a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-google"></a>
+      <a href="#" class="fa fa-linkedin"></a>
+      <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+    </div>
+
+    <h2>Spencer</h2>
+
+    <span class="profilebtn" style="font-size:30px;cursor:pointer" onclick="open()">
+      <img src="img/P1110465.jpg" alt="">
+    </span>
+
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="close()">&times;</a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-google"></a>
+      <a href="#" class="fa fa-linkedin"></a>
+      <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+    </div>
+
+
+    <h2>Jaun</h2>
+
+    <span class="profilebtn" style="font-size:30px;cursor:pointer" onclick="open()">
+      <img src="img/P1110465.jpg" alt="">
+    </span>
+  </div>
+
+
+  <footer>
+
+    <a href="#" class="fa fa-facebook"></a>
     <a href="#" class="fa fa-twitter"></a>
     <a href="#" class="fa fa-google"></a>
     <a href="#" class="fa fa-linkedin"></a>
-    </div>
 
-    <div id="main" class="imgName">
-
-      <button class="openAbout" onclick="openAbout()" name="button">
-        <h3>Andrew Bastian</h3>
-    <img src="img/P1100345.jpg" alt="">
-    </button>
-    </div>
-</article>
-
-<!-- <article  class="teamBox">
+  </footer>
 
 
-    <div id="sidebars" class="pAbout">
-      <a href="javascript:void(0)" class="closeAbout" onclick = "closeAbout()"></a>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id imperdiet nibh. Sed at vestibulum lorem. Suspendisse interdum tortor a nibh dignissim laoreet. Quisque id accumsan libero. Duis mollis nec purus vel ultrices. </p>
-    <a href="#" class="fa fa-twitter"></a>
-    <a href="#" class="fa fa-google"></a>
-    <a href="#" class="fa fa-linkedin"></a>
-    </div>
+  <!--nav bar  -->
+  <script type="text/javascript">
+    function openNav() {
+      document.getElementById("myNav").style.height = "5%";
+    }
 
-    <div id="main" class="imgName">
+    /* Close */
+    function closeNav() {
+      document.getElementById("myNav").style.height = "0%";
+    }
+    // profile
 
-      <button class="openAbout" onclick="openAbout()" name="button">
-        <h3>Lorem Ipsum</h3>
-    <img src="img/P1100345.jpg" alt="">
-    </button>
-    </div>
-</article> -->
+    /* Set the width of the side navigation to 250px and the left margin of the page content to 250px and add a black background color to body */
+    function open() {
+      document.getElementById("mySidenav").style.width = "250px";
+      document.getElementById("main").style.marginLeft = "250px";
+      // document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
+    }
 
-<!-- <footer>
+    /* Set the width of the side navigation to 0 and the left margin of the page content to 0, and the background color of body to white */
+    function close() {
+      document.getElementById("mySidenav").style.width = "0";
+      document.getElementById("main").style.marginLeft = "0";
+      document.body.style.backgroundColor = "black";
+    }
+  </script>
 
-  <a href="#" class="fa fa-facebook"></a>
-  <a href="#" class="fa fa-twitter"></a>
-  <a href="#" class="fa fa-google"></a>
-  <a href="#" class="fa fa-linkedin"></a>
+</body>
 
-</footer> -->
-
-
-  </body>
 </html>
