added profile img, replaced some ipsum on the about.index, IMG coming in sideways though?

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
 
     <h1>about us</h1>
-      <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+      <p>These are the lovely people who have been working on the Secret Family Recipe Cookbook app and marketing webpage...</p>
 
 </div>
 
@@ -60,12 +60,12 @@
 <!-- 2 -->
 <div id="main">
 
-<h2>Andrew Bastian</h2>
+<h2>Barbara Mayfield</h2>
 
 
 
 <span class="profilebtn" id="profile" style="font-size:30px;cursor:pointer">
-  <img src="img/fish.jpg" alt="">
+  <img src="img/IMG_1558_bm.JPG" alt="Profile Picture of Barbara Mayfield">
 </span>
 
 
@@ -74,7 +74,9 @@
   <a href="#" class="fa fa-twitter"></a>
   <a href="#" class="fa fa-google"></a>
   <a href="#" class="fa fa-linkedin"></a>
-  <p>"Neque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+  <p>"Hey there, I'm Barbara. I am a student studying Full Stack Web Development at Lambda School.
+    Our team created this landing page and the Secret Family Recipes Cookbook app."
+  </p>
 </div>
 </div>
 <!-- 3 -->
