--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <div class="overlay-content">
-            a href="about.html">About</a>
+            <a href="about.html">About</a>
             <a href="#">Contact</a>
           </div>
       </div>
