--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/about.css" type="text/css" rel="stylesheet"/>
-    <script src="js.index.js" type="text/javascript" async></script>
+    <script src="js/index.js" type="text/javascript" async></script>
 
   </head>
 
