--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
       <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <div class="overlay-content">
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="#">Contact</a>
           </div>
       </div>
   </div>
 
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; menu</span>
+  <span class="navbtn" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; menu</span>
 
     <!-- <nav>
       <a href="#">about us </a>
