updates to img and media

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 
 
 <span class="profilebtn" id="profile" style="font-size:30px;cursor:pointer">
-  <img src="img/fish.jpg" alt="">
+  <img src="img/andrew.jpg" alt="">
 </span>
 
 
@@ -87,7 +87,7 @@
   </p>
 </div>
 </div>
-  
+
 <!-- 3 -->
 <div  class= "mains" id="main">
 <h2>Andrew Bastian</h2>
